# ex_jsonschema

./: .credo.exs  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  checksum-Elixir.ExJsonschema.Native.exs  mix.exs
.claude/commands/: next-feature.md
.cursor/rules/: development-approach.mdc
.github/workflows/: ci.yml  release.yml
config/: dev.exs  prod.exs  test.exs
demo/: README.md  errors_basic.md  errors_compact.json  errors_h3.md  errors_pretty.json  errors_table.txt  errors_table_compact.txt  errors_with_toc.md  human_no_colors.txt  human_with_colors.txt  llm_prose.txt  llm_prose_no_schema.txt  llm_structured.txt  llm_structured_minimal.txt
docs/guides/: advanced_features.md  caching.md  getting_started.md  meta_validation.md  performance_production.md  streaming_validation.md  testing.md
docs/upgrade/: 00-overview.md  01-core-validation-engine.md  02-configuration-options.md  03-schema-drafts-meta-validation.md  04-external-references-resolution.md  05-custom-validation.md  06-error-handling-output.md  07-performance-caching.md  08-advanced-features.md  99-comprehensive-critique.md  PROGRESS.md  README.md  ROADMAP.md  TESTING_STRATEGY.md  WRAP_UP.md
instructions/: instructions.md
lib/: ex_jsonschema.ex
lib/ex_jsonschema/: cache.ex  compilation_error.ex  draft_detector.ex  error_analyzer.ex  error_formatter.ex  meta_validator.ex  native.ex  options.ex  (+4 more)
native/ex_jsonschema/: Cargo.toml
native/ex_jsonschema/.cargo/: config.toml
native/ex_jsonschema/src/: lib.rs
scripts/: install-hooks.sh
test/: ex_jsonschema_test.exs  test_helper.exs
(+31 files in other folders)
