[package]
name = "ex_jsonschema"
version = "0.1.2"
edition = "2021"

[lib]
name = "ex_jsonschema"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.2", default-features = false }
jsonschema = "0.33"
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]